--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^8.7.2",
     "mongoose-aggregate-paginate-v2": "^1.1.2",
     "node": "^22.10.0",
-    "nodemailer": "^6.9.15"
+    "nodemailer": "^6.9.15",
+    "uuid": "^10.0.0"
   }
 }
